--- a/package.json
+++ b/package.json
@@ -2,13 +2,13 @@
   "jspm": {
     "directories": {},
     "dependencies": {
-      "css": "npm:jspm-loader-css-modules@^0.0.2",
+      "css": "npm:jspm-loader-css@^0.0.5",
       "path": "npm:path@^0.11.14"
     },
     "devDependencies": {
-      "babel": "npm:babel-core@^5.1.13",
-      "babel-runtime": "npm:babel-runtime@^5.1.13",
-      "core-js": "npm:core-js@^0.9.4"
+      "babel": "npm:babel-core@^5.5.4",
+      "babel-runtime": "npm:babel-runtime@^5.5.4",
+      "core-js": "npm:core-js@^0.9.14"
     }
   }
 }
