--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "jspm": {
     "directories": {},
     "dependencies": {
-      "css": "npm:jspm-loader-css-modules@^0.1.1",
+      "css": "npm:jspm-loader-css-modules@^0.1.2",
+      "css-global": "npm:jspm-loader-css@^0.1.3",
       "path": "npm:path@^0.11.14"
     },
     "devDependencies": {
