--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "jspm": {
     "dependencies": {
-      "css": "npm:jspm-loader-css-modules@1.0.0-beta1",
+      "colors.css": "npm:colors.css@^2.3.0",
+      "css": "npm:jspm-loader-css-modules@^1.0.0-beta1",
       "css-global": "npm:jspm-loader-css@^1.0.0",
-      "douglasduteil-jspm-loader-css": "npm:douglasduteil-jspm-loader-css@^1.0.1",
-      "path": "npm:path@^0.11.14"
+      "path": "npm:path@^0.11.14",
+      "postcss-safe-parser": "npm:postcss-safe-parser@^1.0.1"
     },
     "devDependencies": {
       "babel": "npm:babel-core@^5.8.24",
