--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "jspm": {
     "dependencies": {
       "colors.css": "npm:colors.css@^2.3.0",
-      "css": "npm:jspm-loader-css-modules@^1.0.0-beta1",
+      "css": "npm:jspm-loader-css-modules@1.0.1-beta1",
       "css-global": "npm:jspm-loader-css@^1.0.0",
       "path": "npm:path@^0.11.14",
       "postcss-safe-parser": "npm:postcss-safe-parser@^1.0.1"
