--- a/package.json
+++ b/package.json
@@ -1,9 +1,8 @@
 {
   "jspm": {
-    "directories": {},
     "dependencies": {
-      "css": "npm:jspm-loader-css-modules@^0.1.2",
-      "css-global": "npm:jspm-loader-css@^0.1.3",
+      "css": "npm:jspm-loader-css-modules@^1.0.1-beta1",
+      "css-global": "npm:jspm-loader-css@^1.0.1-beta1",
       "path": "npm:path@^0.11.14"
     },
     "devDependencies": {
